Adding the nav bar and well components navigations
Adding the Nav bar, and well components navigations feature

--- a/src/app/components/nav/nav.component.css
+++ b/src/app/components/nav/nav.component.css
@@ -3,15 +3,21 @@
 }
 
 .sidenav {
-  width: 200px;
+  width: 230px;
+  background-color: #141c23;
+  color: white;
 }
 
 .sidenav .mat-toolbar {
-  background: inherit;
+  background: #ffffff;
 }
 
 .mat-toolbar.mat-primary {
   position: sticky;
   top: 0;
   z-index: 1;
+}
+
+.mat-list-item{
+
 }
