--- a/src/app/components/production-budget/production-budget.component.html
+++ b/src/app/components/production-budget/production-budget.component.html
@@ -1,6 +1,6 @@
 
 <button class="btn btn-primary" (click)="triggerModal(modalData)">insert</button>
-<button class="btn btn-primary" (click)="triggerModal(updateModal) ; update()">Update</button>
+<button class="btn btn-primary" (click)="triggerModal(updateModal) ; helper()">Update</button>
 <ng-template #modalData let-modal>
   <div class="modal-header">
     <h4 class="modal-title" id="modal-basic-title">Insert New Production Budget Record</h4>
@@ -96,7 +96,8 @@
           <form >
             <div>
               <label>Production Date</label>
-              <input  type="date"  [(ngModel)]="dateForUpdate" dataformatas="MM/dd/yyyy" class="form-control" required>
+              <input type="date" [ngModel] ="date | date:'yyyy-MM-dd'" class="form-control" (ngModelChange)="date = $event">
+<!--              <input  type="date"  [(ngModel)]="dateForUpdate" dataformatas="MM/dd/yyyy" class="form-control" required>-->
             </div>
             <div>
               <label>Production Time</label>
@@ -149,7 +150,7 @@
               <input type="number" [(ngModel)]="productionBudgetDataUpdate.agibaBOE" class="form-control" required>
             </div>
 
-            <button type="submit" class="btn bg-primary" (click)="insert()">Add</button>
+            <button type="submit" class="btn bg-primary" (click)="update()">update</button>
           </form>
         </div>
       </div>
