--- a/src/app/components/fluid-level-measurements/fluid-level-measurements.component.html
+++ b/src/app/components/fluid-level-measurements/fluid-level-measurements.component.html
@@ -58,7 +58,7 @@
               >
                 <td style="display: none">{{ currentIndex + 1 }}</td>
                 <td>{{ flm.wellId }}</td>
-                <td>{{ flm.date | date: "dd-MM-yyyy" }}</td>
+                <td>{{ flm.date | date: "MM-dd-yyyy" }}</td>
                 <td>{{ flm.intervals }}</td>
                 <td>{{ flm.flType }}</td>
                 <td>{{ flm.fluidLevel }}</td>
