--- a/src/app/components/well-general-info/well-general-info.component.html
+++ b/src/app/components/well-general-info/well-general-info.component.html
@@ -1,7 +1,35 @@
 <div class="container">
     <div class="card">
         <div class="card-body">
-            <br>
+         <br>
+         <div class="row">
+        <div class="col-md-12">
+          <button class="btn btn-danger" (click)="deleteFromWellGeneralInfo()">🗑️</button>
+          <button *ngIf="highlightedRow !== -1" class="btn btn-warning" (click)="triggerModal(modalDataUpdate)">🖊️</button>
+          <button *ngIf="wellGeneralInfoResponse == null"class="btn btn-primary" (click)="triggerModal(modalData)" >➕</button>
+
+          <ng-template #modalData let-modal>
+            <div class="modal-header">
+              <h4 class="modal-title" id="modal-basic-title">Insert New wellGeneralInfo</h4>
+              <button type="button" class="close" aria-label="Close" (click)="modal.dismiss('Cross click')">
+                <span aria-hidden="true">×</span>
+              </button>
+            </div>
+            <app-add-new-well-general-info [wellIdToaddWellGeneralInfo]="wellIdToaddWellGeneralInfo" (closeModal)=closePopUpAndRefreshTable()></app-add-new-well-general-info>
+          </ng-template>
+
+          <ng-template #modalDataUpdate let-modal>
+            <div class="modal-header">
+              <h4 class="modal-title" id="modal-basic-title">Update A FLM Record</h4>
+              <button type="button" class="close" aria-label="Close" (click)="modal.dismiss('Cross click')">
+                <span aria-hidden="true">×</span>
+              </button>
+            </div>
+            <app-update-well-general-info [wellGeneralInfoResponse]="wellGeneralInfoResponse" (closeModal)=closePopUpAndRefreshTable()></app-update-well-general-info>
+          </ng-template>
+
+        </div>
+      </div>
             <div class="row">
                 <div class="col-md-12">
                     <table class="table table-bordered table-hover">
@@ -21,6 +49,8 @@
                           </tr>
                         </thead>
                         <tbody *ngIf="wellGeneralInfoResponse !=null">
+                          <tr  (click)="ClickedRowToDelete(wellGeneralInfoResponse.id); ClickedRowToUpdate(wellGeneralInfoResponse.id)"
+                          [class.active]="wellGeneralInfoResponse.id == highlightedRow">
                             <td>{{wellGeneralInfoResponse.id}}</td>
                             <td>{{wellGeneralInfoResponse.wellId}}</td>
                             <td>{{wellGeneralInfoResponse.subCompanyName}}</td>
@@ -32,8 +62,8 @@
                             <td>{{wellGeneralInfoResponse.ycord}}</td>
                             <td>{{wellGeneralInfoResponse.lat}}</td>
                             <td>{{wellGeneralInfoResponse.longitude}}</td>
-                            <td><button (click)="deleteWellGeneralInfo(wellGeneralInfoResponse.id)" class="btn btn-warning">Delete</button></td>
-                        </tbody>
+                          </tr>
+                      </tbody>
                       </table>
                 </div>
                
