--- a/src/app/components/new-productionbudget/new-productionbudget.component.html
+++ b/src/app/components/new-productionbudget/new-productionbudget.component.html
@@ -4,7 +4,7 @@
       <br />
       <div>
         <form [formGroup]="form">
-          
+
 
           <div class="lg-3">
             <label for="formDate" class="form-label">Release Date</label>
@@ -28,7 +28,7 @@
             <label  class="form-label">meleiha</label>
             <input formControlName="meleiha" type="number" class="form-control" placeholder="meleiha" id="meleiha"/>
             <div *ngIf="form.controls['meleiha'].invalid && ((form.controls['meleiha'].touched) || (this.form.controls['meleiha'].dirty))">
-              <small *ngIf="this.form.controls['meleiha'].hasError('required')" class="form-text text-danger">Please Enter The data</small>
+              <small *ngIf="this.form.controls['meleiha'].hasError('required')" class="form-text text-danger">Please Enter The Data</small>
             </div>
           </div>
           <br>
@@ -47,7 +47,7 @@
             <label class="form-label">aghar</label>
             <input formControlName="aghar" type="number" class="form-control" placeholder="aghar" id="aghar"/>
             <div *ngIf="form.controls['aghar'].invalid && ((form.controls['aghar'].touched) || (this.form.controls['aghar'].dirty))">
-              <small *ngIf="this.form.controls['aghar'].hasError('required')" class="form-text text-danger">Please Enter The data</small>
+              <small *ngIf="this.form.controls['aghar'].hasError('required')" class="form-text text-danger">Please Enter The Data</small>
             </div>
           </div>
           <br>
@@ -56,7 +56,7 @@
             <label class="form-label">eastKanays</label>
             <input formControlName="eastKanays" type="number" class="form-control" placeholder="eastKanays" id="eastKanays"/>
             <div *ngIf="form.controls['eastKanays'].invalid && ((form.controls['eastKanays'].touched) || (this.form.controls['eastKanays'].dirty))">
-              <small *ngIf="this.form.controls['eastKanays'].hasError('required')" class="form-text text-danger">Please Enter The data</small>
+              <small *ngIf="this.form.controls['eastKanays'].hasError('required')" class="form-text text-danger">Please Enter The Data</small>
             </div>
           </div>
           <br>
@@ -67,7 +67,7 @@
             <label class="form-label">zarif</label>
             <input formControlName="zarif" type="number" class="form-control" placeholder="zarif" id="zarif"/>
             <div *ngIf="form.controls['zarif'].invalid && ((form.controls['zarif'].touched) || (this.form.controls['zarif'].dirty))">
-              <small *ngIf="this.form.controls['zarif'].hasError('required')" class="form-text text-danger">Please Enter data</small>
+              <small *ngIf="this.form.controls['zarif'].hasError('required')" class="form-text text-danger">Please Enter Data</small>
             </div>
           </div>
           <br>
@@ -76,7 +76,7 @@
             <label class="form-label">faras</label>
             <input formControlName="faras" type="number" class="form-control" placeholder="faras" id="faras"/>
             <div *ngIf="form.controls['faras'].invalid && ((form.controls['faras'].touched) || (this.form.controls['faras'].dirty))">
-              <small *ngIf="this.form.controls['faras'].hasError('required')" class="form-text text-danger">Please Enter tha data</small>
+              <small *ngIf="this.form.controls['faras'].hasError('required')" class="form-text text-danger">Please Enter tha Data</small>
             </div>
           </div>
           <br>
@@ -86,7 +86,7 @@
             <label class="form-label">raml</label>
             <input formControlName="raml" type="number" class="form-control" placeholder="raml" id="raml"/>
             <div *ngIf="form.controls['raml'].invalid && ((form.controls['raml'].touched) || (this.form.controls['raml'].dirty))">
-              <small *ngIf="this.form.controls['raml'].hasError('required')" class="form-text text-danger">Please Enter The data</small>
+              <small *ngIf="this.form.controls['raml'].hasError('required')" class="form-text text-danger">Please Enter The Data</small>
 
             </div>
           </div>
@@ -103,7 +103,7 @@
             <label class="form-label">ashrafi</label>
             <input formControlName="ashrafi" type="number" class="form-control" placeholder="ashrafi" id="ashrafi"/>
             <div *ngIf="form.controls['ashrafi'].invalid && ((form.controls['ashrafi'].touched) || (this.form.controls['ashrafi'].dirty))">
-              <small *ngIf="this.form.controls['ashrafi'].hasError('required')" class="form-text text-danger">Please Enter The data</small>
+              <small *ngIf="this.form.controls['ashrafi'].hasError('required')" class="form-text text-danger">Please Enter The Data</small>
             </div>
           </div>
           <br>
@@ -111,7 +111,7 @@
             <label class="form-label">agibaOil</label>
             <input formControlName="agibaOil" type="number" class="form-control" placeholder="agibaOil" id="agibaOil"/>
             <div *ngIf="form.controls['agibaOil'].invalid && ((form.controls['agibaOil'].touched) || (this.form.controls['agibaOil'].dirty))">
-              <small *ngIf="this.form.controls['agibaOil'].hasError('required')" class="form-text text-danger">Please Enter The data</small>
+              <small *ngIf="this.form.controls['agibaOil'].hasError('required')" class="form-text text-danger">Please Enter The Data</small>
             </div>
           </div>
           <br>
@@ -119,7 +119,7 @@
             <label class="form-label">salesGas</label>
             <input formControlName="salesGas" type="number" class="form-control" placeholder="salesGas" id="salesGas"/>
             <div *ngIf="form.controls['salesGas'].invalid && ((form.controls['salesGas'].touched) || (this.form.controls['salesGas'].dirty))">
-              <small *ngIf="this.form.controls['salesGas'].hasError('required')" class="form-text text-danger">Please Enter The data</small>
+              <small *ngIf="this.form.controls['salesGas'].hasError('required')" class="form-text text-danger">Please Enter The Data</small>
             </div>
           </div>
           <br>
@@ -127,7 +127,7 @@
             <label class="form-label">agibaBOE</label>
             <input formControlName="agibaBOE" type="number" class="form-control" placeholder="agibaBOE" id="agibaBOE"/>
             <div *ngIf="form.controls['agibaBOE'].invalid && ((form.controls['agibaBOE'].touched) || (this.form.controls['agibaBOE'].dirty))">
-              <small *ngIf="this.form.controls['agibaBOE'].hasError('required')" class="form-text text-danger">Please Enter The data</small>
+              <small *ngIf="this.form.controls['agibaBOE'].hasError('required')" class="form-text text-danger">Please Enter The Data</small>
             </div>
           </div>
           <button  type="submit" class="btn btn-primary" (click)="insert()">Insert</button>
