--- a/src/app/components/update-drilling-info/update-drilling-info.component.html
+++ b/src/app/components/update-drilling-info/update-drilling-info.component.html
@@ -14,14 +14,14 @@
           </div>
           <br>
 
-          <div class="lg-3">
+          <!-- <div class="lg-3">
             <label for="formHour" class="form-label">Time</label>
             <input [(ngModel)]="convertedTime" formControlName="time" type="time" class="form-control" placeholder="Time" id="formHour"/>
             <div *ngIf="form.controls['time'].invalid && ((form.controls['time'].touched) || (this.form.controls['time'].dirty))">
               <small *ngIf="this.form.controls['time'].hasError('required')" class="form-text text-danger">Please Pick a Time</small>
             </div>
           </div>
-          <br>
+          <br> -->
 
           <div class="lg-3">
             <label for="formwellType" class="form-label">wellType</label>
